--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "prisma1 deploy"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,10 @@
   "dependencies": {
     "apollo-server": "^3.6.3",
     "graphql": "^16.3.0",
-    "nexus": "^1.2.0"
+    "nexus": "^1.2.0",
+    "nexus-prisma": "^0.35.0",
+    "nexus-prisma-generate": "^0.3.7",
+    "prisma-client-lib": "^1.34.12"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -32,5 +35,8 @@
     "husky": "^1.3.1",
     "mocha": "^6.2.2",
     "nodemon": "^1.19.4"
+  },
+  "resolutions": {
+    "graphql": "^16.3.0"
   }
 }
