--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "nodemon --exec babel-node -r dotenv/config src/index.js",
     "deploy": "prisma1 deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.6.3",
-    "graphql": "^16.3.0",
-    "nexus": "^1.2.0",
-    "nexus-prisma": "^0.35.0",
+    "@prisma/client": "^3.9.2",
+    "graphql": "^14.3.0",
+    "nexus": "^0.11.7",
+    "nexus-prisma": "^0.3.8",
     "nexus-prisma-generate": "^0.3.7",
-    "prisma-client-lib": "^1.34.12"
+    "prisma-client-lib": "1.34.8",
+    "graphql-yoga": "^1.18.3",
+    "graphql-disable-introspection": "^1.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -34,9 +36,10 @@
     "eslint-plugin-import": "^2.18.2",
     "husky": "^1.3.1",
     "mocha": "^6.2.2",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "dotenv": "^7.0.0"
   },
   "resolutions": {
-    "graphql": "^16.3.0"
+    "graphql": "^14.3.0"
   }
 }
