--- a/prisma.yml
+++ b/prisma.yml
@@ -19,7 +19,7 @@ seed:
 # Ensures Prisma client is re-generated after a datamodel change.
 hooks:
   post-deploy:
-    - npx nexus-prisma-generate --client ./src/generated/prisma-client --output ./src/generated/nexus-prisma --js
+    - yarn nexus-prisma-generate --client ./src/generated/prisma-client --output ./src/generated/nexus-prisma --js
 # If specified, the `secret` must be used to generate a JWT which is attached
 # to the `Authorization` header of HTTP requests made against the Prisma API.
 # Info: https://www.prisma.io/docs/reference/prisma-api/concepts-utee3eiquo#authentication
