--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node -r dotenv/config src/index.js",
-    "deploy": "prisma1 deploy"
+    "deploy": "prisma1 generate && prisma1 deploy"
   },
   "keywords": [],
   "author": "",
