--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 PRISMA_ENDPOINT=http://localhost:4466
 ENV=development
+POSTGRES_HOST=localhost 
+POSTGRES_PORT=5432
+POSTGRES_USERNAME=prisma
+POSTGRES_PASSWORD=prisma
+POSTGRES_DB=prisma
+POSTGRES_SCHEMA=default$default
