--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.9.2",
+    "bcryptjs": "^2.4.3",
     "graphql": "^14.3.0",
+    "graphql-disable-introspection": "^1.1.0",
+    "graphql-yoga": "^1.18.3",
     "nexus": "^0.11.7",
     "nexus-prisma": "^0.3.8",
     "nexus-prisma-generate": "^0.3.7",
-    "prisma-client-lib": "1.34.8",
-    "graphql-yoga": "^1.18.3",
-    "graphql-disable-introspection": "^1.1.0"
+    "pg": "^8.7.3",
+    "prisma-client-lib": "1.34.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -30,14 +32,14 @@
     "@babel/runtime": "^7.6.3",
     "babel-eslint": "^10.0.3",
     "babel-plugin-module-resolver": "^3.2.0",
+    "dotenv": "^7.0.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
     "husky": "^1.3.1",
     "mocha": "^6.2.2",
-    "nodemon": "^1.19.4",
-    "dotenv": "^7.0.0"
+    "nodemon": "^1.19.4"
   },
   "resolutions": {
     "graphql": "^14.3.0"
