--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-PRISMA_ENDPOINT=http://localhost:4466
+SERVER_PORT=4000
 ENV=development
+
+JWT_SECRET=leducthang98
+
 POSTGRES_HOST=localhost 
 POSTGRES_PORT=5432
 POSTGRES_USERNAME=prisma
 POSTGRES_PASSWORD=prisma
 POSTGRES_DB=prisma
 POSTGRES_SCHEMA=default$default
+
+PRISMA_ENDPOINT=http://localhost:4466
